Sublist the network list in order to support async loading of two networks

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,13 @@ ul#network-list
     padding: 0px;
 }
 
+ul.network
+{
+    margin: 0px;
+    padding: 0px;    
+    list-style: none;
+}
+
 li.network
 {
     color: #666666;
