--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,41 @@ html, body {
   overflow-y: hidden;
 }
 
+@font-face {
+  font-family: "entypo";
+  src: url("./../fonts/entypo.woff") format("woff"),
+       url("./../fonts/entypo.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.icon:before {
+  position: relative;
+  display: inline-block;
+  font-family: "entypo";
+  speak: none;
+  font-size: 100%;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-user:before {
+  content: '\e80a';
+}
+
+.icon-cog:before {
+  content: '\e855';
+}
+
+.icon-plus:before {
+  content: '\e816';
+}
+
 table#window-content {
   width: 100vw;
   height: 100vh;
@@ -113,6 +148,7 @@ li.channel-selected {
   overflow-y: scroll;
   padding: 10px;
   float: left;
+  font-family: "Segoe UI", "San Francisco", "Helvetica Neue", "Helvetica";
   font-size: 11pt;
 }
 
@@ -142,6 +178,7 @@ li.channel-selected {
   margin-bottom: 3px;
   margin-left: 0px;
   margin-right: 0px;
+  font-family: "Segoe UI", "San Francisco", "Helvetica Neue", "Helvetica";
   font-size: 11pt;
 }
 
@@ -255,6 +292,7 @@ input#chat-input:focus {
 
 .prompt-window {
   font-size: 13px;
+  font-family: "Segoe UI", "San Francisco", "Helvetica Neue", "Helvetica";
   border: 1px solid #ddd;
   position: absolute;
   background-color: white;
@@ -314,6 +352,7 @@ input#chat-input:focus {
   margin-top: 5px;
   margin-bottom: 5px;
   font-size: 13px;
+  font-family: "Segoe UI", "San Francisco", "Helvetica Neue", "Helvetica";
 }
 
 #channel-modes ul#ban-list {
@@ -415,4 +454,174 @@ a.title {
   color: #555;
   cursor: default;
   overflow: hidden;
+}
+
+/* Imported from the Photon Library */
+
+.btn {
+  display: inline-block;
+  padding: 3px 8px;
+  margin-bottom: 0;
+  font-size: 12px;
+  line-height: 1.4;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: default;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.06);
+  -webkit-app-region: no-drag;
+}
+
+.btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.btn-menu {
+  padding-right: 22px;
+  padding-left: 22px;
+}
+
+.btn-default {
+  color: #333;
+  border-top-color: #c2c0c2;
+  border-right-color: #c2c0c2;
+  border-bottom-color: #a19fa1;
+  border-left-color: #c2c0c2;
+  background-color: #fcfcfc;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fcfcfc), color-stop(100%, #f1f1f1));
+  background-image: -webkit-linear-gradient(top, #fcfcfc 0%, #f1f1f1 100%);
+  background-image: linear-gradient(to bottom, #fcfcfc 0%, #f1f1f1 100%);
+}
+
+.btn-default:active {
+  background-color: #ddd;
+  background-image: none;
+}
+
+.btn .icon {
+  float: left;
+  width: 14px;
+  height: 14px;
+  margin-top: 1px;
+  margin-bottom: 1px;
+  color: #737475;
+  font-size: 14px;
+  line-height: 1;
+}
+
+.btn-group {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-app-region: no-drag;
+}
+
+.btn-group .btn {
+  position: relative;
+  float: left;
+}
+
+.btn-group .btn:focus, .btn-group .btn:active {
+  z-index: 2;
+}
+
+.btn-group .btn.active {
+  z-index: 3;
+}
+
+.btn-group .btn + .btn, .btn-group .btn + .btn-group, .btn-group .btn-group + .btn, .btn-group .btn-group + .btn-group {
+  margin-left: -1px;
+}
+
+.btn-group > .btn:first-child {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.btn-group > .btn:last-child {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.btn-group > .btn:not(:first-child):not(:last-child) {
+  border-radius: 0;
+}
+
+.btn-group .btn + .btn {
+  border-left: 1px solid #c2c0c2;
+}
+
+.btn-group .btn + .btn.active {
+  border-left: 0;
+}
+
+.btn-group .active {
+  color: #fff;
+  border: 1px solid transparent;
+  background-color: #6d6c6d;
+  background-image: none;
+}
+
+.btn-group .active .icon {
+  color: #fff;
+}
+
+.toolbar {
+  min-height: 25px;
+  box-shadow: inset 0 1px 0 #f5f4f5;
+  background-color: #e8e6e8;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e8e6e8), color-stop(100%, #d1cfd1));
+  background-image: -webkit-linear-gradient(top, #e8e6e8 0%, #d1cfd1 100%);
+  background-image: linear-gradient(to bottom, #e8e6e8 0%, #d1cfd1 100%);
+}
+
+.toolbar:before, .toolbar:after {
+  display: table;
+  content: " ";
+}
+
+.toolbar:after {
+  clear: both;
+}
+
+.toolbar-header {
+  border-bottom: 1px solid #c2c0c2;
+}
+
+.toolbar-footer {
+  border-top: 1px solid #c2c0c2;
+  -webkit-app-region: drag;
+}
+
+.toolbar-borderless {
+  border-top: 0;
+  border-bottom: 0;
+}
+
+.toolbar-actions {
+  margin-top: 4px;
+  margin-bottom: 3px;
+  padding-top: -5px;
+  padding-right: 3px;
+  padding-left: 3px;
+  padding-bottom: 3px;
+  -webkit-app-region: drag;
+}
+
+.toolbar-actions:before, .toolbar-actions:after {
+  display: table;
+  content: " ";
+}
+
+.toolbar-actions:after {
+  clear: both;
+}
+
+.toolbar-actions > .btn, .toolbar-actions > .btn-group {
+  margin-left: 4px;
+  margin-right: 4px;
 }
