--- a/src/index.css
+++ b/src/index.css
@@ -70,21 +70,21 @@ li.channel-selected {
   cursor: pointer;
 }
 
-.nav-unread {
+li.nav-unread {
   color: red !important;
 }
 
-.channel-view {
+div.channel-view {
   height: calc(100vh - 100px);
   font-size: 10pt;
   background-color: white;
 }
 
-.channel-content-view {
+div.channel-content-view {
   height: calc(100vh - 39px);
 }
 
-.channel-title-view {
+div.channel-title-view {
   width: calc(100vw - 401px);
   height: 40px;
   background-color: #f5f5f4;
@@ -92,7 +92,7 @@ li.channel-selected {
   user-select: none;
 }
 
-.channel-title-label {
+div.channel-title-label {
   user-select: none;
   background-color: #f5f5f4;
   padding: 13px 3px 3px 3px;
@@ -106,7 +106,7 @@ li.channel-selected {
   cursor: default;
 }
 
-.channel-message-view {
+div.channel-message-view {
   width: calc(100vw - 421px);
   height: calc(100vh - 97px);
   overflow-x: hidden;
@@ -116,18 +116,7 @@ li.channel-selected {
   font-size: 11pt;
 }
 
-.channel-message {
-  margin-top: 0px;
-  margin-bottom: 3px;
-  margin-left: 0px;
-  margin-right: 0px
-}
-
-.channel-message-error {
-  color: red;
-}
-
-.server-view {
+div.server-view {
   height: calc(100vh - 57px);
   width: calc(100vw - 221px);
   overflow-x: hidden;
@@ -135,14 +124,6 @@ li.channel-selected {
   padding: 10px;
   font-size: 10pt;
   background-color: white;
-}
-
-.server-message {
-  margin-top: 0px;
-  margin-bottom: 3px;
-  margin-left: 0px;
-  margin-right: 0px;
-  font-size: 11pt;
 }
 
 input#chat-input {
