--- a/src/styles/channels-panel.css
+++ b/src/styles/channels-panel.css
@@ -62,3 +62,24 @@ li.channel-selected {
 li.nav-unread {
     color: red !important;
 }
+
+li.user {
+    font-size: 10pt;
+    border: 1px solid #F8F8F2;
+    border-radius: 8px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+li.user:hover {
+    background-color: #dcdfe1;
+    cursor: pointer;
+}
+
+li.user-selected {
+    background-color: #dcdfe1;
+    cursor: pointer;
+}
