--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -126,3 +126,7 @@ td.messages-panel {
     height: calc(100vh - 40px);
     vertical-align: top;
 }
+
+button#btn-add-server {
+    width: 178px;
+}
