--- a/src/styles/photon.css
+++ b/src/styles/photon.css
@@ -37,6 +37,10 @@
     content: '\e816';
 }
 
+.icon-flash:before {
+    content: '\e8b4';
+}
+
 .btn {
     display: inline-block;
     padding: 3px 8px;
@@ -147,6 +151,10 @@
 
 .btn-group .active .icon {
     color: #fff;
+}
+
+.btn .icon-text {
+    margin-right: 5px;
 }
 
 .toolbar {
