--- a/src/styles/messages.css
+++ b/src/styles/messages.css
@@ -71,3 +71,14 @@ span.client-action {
 span.highlight {
     color: red;
 }
+
+/** inline tables */
+table.cmd-list-table {
+    border: 1px solid #ddd;
+    margin-top: 1em;
+    max-width: 400px;
+}
+
+table.cmd-list-table td.topic {
+    max-width: 50vw;
+}
