--- a/src/styles/photon.css
+++ b/src/styles/photon.css
@@ -277,3 +277,38 @@
     margin-left: 4px;
     margin-right: 4px;
 }
+
+table.table-striped {
+    border-collapse: separate;
+    font-size: 12px;
+    text-align: left;
+}
+
+table.table-striped thead {
+    background-color: #f5f5f4;
+}
+
+table.table-striped tbody {
+    background-color: #fff;
+}
+
+table.table-striped tr:nth-child(even) {
+    background-color: #f5f5f4;
+}
+
+table.table-striped th {
+    font-weight: normal;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+
+table.table-striped th, table.table-striped td {
+    padding: 2px 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+table.table-striped th:last-child, table.table-striped td:last-child {
+    border-right: 0;
+}
