Updated the licence boilerplate

--- a/src/styles/photon.css
+++ b/src/styles/photon.css
@@ -1,7 +1,6 @@
 /** 
- * Subset of https://github.com/connors/photon
- *
- * @license MIT
+ * https://github.com/connors/photon
+ * Licensed under the MIT License.
  */
 @font-face {
     font-family: "entypo";
