--- a/src/styles/prompts.css
+++ b/src/styles/prompts.css
@@ -1,3 +1,8 @@
+/*!
+ * Copyright (c) 2018 Claus Jørgensen
+ * This code is licensed under MIT license (see LICENSE.txt for details) 
+ */
+
 /** 
  * UI Prompts
  */
