--- a/src/styles/prompts.css
+++ b/src/styles/prompts.css
@@ -11,7 +11,8 @@ div.prompt-window {
     border: 1px solid #ddd;
     position: absolute;
     background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-bottom: 5px;
 }
 
 div.prompt-title {
