--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,12 @@ html, body {
     overflow-y: hidden;
 }
 
+:not(input):not(textarea), :not(input):not(textarea)::after, :not(input):not(textarea)::before {
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
 table#window-content {
     width: 100vw;
     height: 100vh;
@@ -39,7 +45,6 @@ div.channel-title-view {
 }
 
 div.channel-title-label {
-    user-select: none;
     background-color: #f5f5f4;
     padding: 13px 3px 3px 3px;
     text-align: center;
@@ -62,6 +67,10 @@ div.channel-message-view {
     font-size: 11pt;
 }
 
+div.channel-message-view > p > span {
+    user-select: text;
+}
+
 div.server-view {
     height: calc(100vh - 57px);
     width: calc(100vw - 221px);
@@ -70,6 +79,10 @@ div.server-view {
     padding: 10px;
     font-size: 10pt;
     background-color: white;
+}
+
+div.server-view > p > span {
+    user-select: text;
 }
 
 div.user-view {
@@ -83,11 +96,9 @@ div.user-title-view {
     height: 40px;
     background-color: #f5f5f4;
     border-bottom: 1px solid #ddd;
-    user-select: none;
 }
 
 div.user-title-label {
-    user-select: none;
     background-color: #f5f5f4;
     padding: 13px 3px 3px 3px;
     text-align: center;
